--- a/html/1-1.html
+++ b/html/1-1.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>CSSステップアップ練習問題 1-1 余白その１ 基本</title>
+		<title>1-1 余白その１ 基本</title>
 
 		<!-- css -->
 		<link rel="stylesheet" href="../common/css/main.css" />
-		<link rel="stylesheet" href="./css/1-1.css" />
+		<link rel="stylesheet" href="../css/1-1.css" />
 	</head>
 	<body>
 		<!--
