--- a/-kaitourei/html/1-2.html
+++ b/-kaitourei/html/1-2.html
@@ -15,17 +15,17 @@
         命名規則はBEMに従ってください。
         -->
 
-		<div class="">
-			<img class="" src="../common/imgs/img_01.jpg" alt="" />
-			<div class="">
-				<div class="">
-					<h1 class="">
+		<div class="sec">
+			<img class="sec__img" src="../common/imgs/img_01.jpg" alt="" />
+			<div class="sec-cnt">
+				<div class="sec-cnt__in">
+					<h1 class="sec-cnt__ttl">
 						FLEXで<br />
 						横並びと縦並びと<br />
 						中央揃え
 					</h1>
-					<p class="">こんな配置ができるかな？</p>
-					<a class="" href="">ボタン</a>
+					<p class="sec-cnt__txt">こんな配置ができるかな？</p>
+					<a class="sec-cnt__btn" href="">ボタン</a>
 				</div>
 			</div>
 		</div>
