--- a/-kaitourei/html/1-5.html
+++ b/-kaitourei/html/1-5.html
@@ -15,16 +15,16 @@
         命名規則はBEMに従ってください。
         -->
 
-		<div class="">
-			<ul class="">
-				<li class=""></li>
-				<li class=""></li>
+		<div class="container">
+			<ul class="block-list">
+				<li class="block-list__item"></li>
+				<li class="block-list__item"></li>
 				<!-- purple -->
-				<li class=""></li>
+				<li class="block-list__item block-list__item--purple"></li>
 				<!-- /purple -->
-				<li class=""></li>
-				<li class=""></li>
-				<li class=""></li>
+				<li class="block-list__item"></li>
+				<li class="block-list__item"></li>
+				<li class="block-list__item"></li>
 			</ul>
 		</div>
 	</body>
