--- a/-kaitourei/html/1-7.html
+++ b/-kaitourei/html/1-7.html
@@ -16,13 +16,13 @@
         -->
 
 		<!-- wrapper -->
-		<div class="">
+		<div class="wrapper">
 			<!-- content -->
-			<div class="">
-				<p class="">
+			<div class="card">
+				<p class="card__txt">
 					カニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかに
 				</p>
-				<a class="" href="">登録して読む</a>
+				<a class="card__btn" href="">登録して読む</a>
 			</div>
 			<!-- /content -->
 		</div>
