--- a/-kaitourei/html/1-9.html
+++ b/-kaitourei/html/1-9.html
@@ -16,20 +16,20 @@
         -->
 
 		<!-- wrapper -->
-		<div class="">
+		<div class="wrapper">
 			<!-- content -->
-			<div class="">
+			<div class="icons">
 				<!-- hamburger -->
-				<button class="">
-					<span class=""></span>
-					<span class=""></span>
-					<span class=""></span>
+				<button class="menu">
+					<span class="menu__line"></span>
+					<span class="menu__line"></span>
+					<span class="menu__line"></span>
 				</button>
 				<!-- /hamburger -->
 				<!-- hamburger close -->
-				<button class="">
-					<span class=""></span>
-					<span class=""></span>
+				<button class="menu menu--active">
+					<span class="menu__line"></span>
+					<span class="menu__line"></span>
 				</button>
 				<!-- /hamburger close -->
 			</div>
