--- a/html/1-8.html
+++ b/html/1-8.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="../common/css/main.css" />
 		<link rel="stylesheet" href="../css/1-8.css" />
 	</head>
-	<body>
+	<body id="top">
 		<!--
         自分でクラスをつけてください。
         命名規則はBEMに従ってください。
@@ -55,7 +55,10 @@
 		</header>
 		<!-- /header -->
 		<!-- top-btn -->
-		<a class="" href="">上に戻る</a>
+		<a class="" href="#top">上に戻る</a>
 		<!-- /top-btn -->
+		<!-- content -->
+		<main class="main"></main>
+		<!-- /content -->
 	</body>
 </html>
