--- a/-kaitourei/html/1-6.html
+++ b/-kaitourei/html/1-6.html
@@ -16,14 +16,14 @@
         -->
 
 		<!-- wrapper -->
-		<div class="">
+		<div class="wrapper">
 			<!-- content -->
-			<div class="">
-				<h1 class="">ここがポイント!!</h1>
-				<p class="">
+			<div class="card">
+				<h1 class="card__ttl">ここがポイント!!</h1>
+				<p class="card__txt">
 					カニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかにカニを滑らかに
 				</p>
-				<a class="" href="">続きを見る</a>
+				<a class="card__btn" href="">続きを見る</a>
 			</div>
 			<!-- /content -->
 		</div>
