--- a/-kaitourei/html/1-8.html
+++ b/-kaitourei/html/1-8.html
@@ -9,17 +9,17 @@
 		<link rel="stylesheet" href="../common/css/main.css" />
 		<link rel="stylesheet" href="../css/1-8.css" />
 	</head>
-	<body>
+	<body id="top">
 		<!--
         自分でクラスをつけてください。
         命名規則はBEMに従ってください。
         -->
 
 		<!-- header -->
-		<header class="">
+		<header class="header">
 			<!-- logo -->
 			<svg
-				class=""
+				class="header__logo"
 				width="132"
 				height="25"
 				viewBox="0 0 132 25"
@@ -55,7 +55,10 @@
 		</header>
 		<!-- /header -->
 		<!-- top-btn -->
-		<a class="" href="">上に戻る</a>
+		<a class="page-top-btn" href="#top">上に戻る</a>
 		<!-- /top-btn -->
+		<!-- content -->
+		<main class="main"></main>
+		<!-- /content -->
 	</body>
 </html>
